2021-09-27  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.9.2
	- Library version: 1.8.0

	- Fix a bug of Replicate in the asynchronous mode.

2021-09-25  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.9.1
	- Library version: 1.7.0

	- Fix a bug of Replicate in the asynchronous mode.

2021-09-23  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.9.0
	- Library version: 1.6.0

	- Add asynchronous replication features.

2021-09-05  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.7.3
	- Library version: 1.5.0

	- Add the SearchModal method to RemoteDBM.
	- Add methods to the stream API.
	- Rebuild and Synchronize are done in background.

2021-09-05  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.7.2
	- Library version: 1.4.0

	- Supports the asynchronous API on the server.

2021-08-31  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.7.1
	- Library version: 1.4.0

	- Add test cases.
	- Fix a compilation error on MacOS.

2021-08-31  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.7.0
	- Library version: 1.3.0

	- Stream API is added.

2021-08-28  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.5.0
	- Library version: 1.2.0

	- Initial release.